--- a/.github/workflows/automate.yml
+++ b/.github/workflows/automate.yml
@@ -26,7 +26,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install flake8 pytest
-        pip install -r requirements.txt; fi
+        pip install -r requirements.txt
     
     - name: Test with pytest
       run: |
