--- a/.github/workflows/automate.yml
+++ b/.github/workflows/automate.yml
@@ -76,6 +76,6 @@ jobs:
       uses: aws-actions/amazon-ecs-deploy-task-definition@v2
       with:
         task-definition: ${{ steps.task-def.outputs.task-definition }}
-        service: insurance_app_service
+        service: insurance_app_service_2
         cluster: ins_app_cluster
         wait-for-service-stability: true
